--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -14,7 +14,7 @@
             <td>{{user != null ? user.name : ''}}</td>
             <td>{{user != null ? user.email : ''}}</td>
             <td class="text-right">
-                <button type="button" class="btn btn-sm btn-danger">
+                <button type="button" class="btn btn-sm btn-danger" (click)="deleteUser(i)">
                     <i class="glyphicon glyphicon-trash"></i>
                 </button>
                 <button type="button" class="btn btn-sm btn-primary">
