--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -4,9 +4,9 @@
 <table class="table table-hover table-striped">
     <thead>
         <tr>
-            <td>Name</td>
-            <td>Email</td>
-            <td></td>
+            <th>Name</th>
+            <th>Email</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -14,9 +14,7 @@
             <td>{{user != null ? user.name : ''}}</td>
             <td>{{user != null ? user.email : ''}}</td>
             <td class="text-right">
-                <button type="button" class="btn btn-sm btn-danger" (click)="deleteUser(i)">
-                    <i class="glyphicon glyphicon-trash"></i>
-                </button>
+                <delete-user [index]="i" (userDeleted)="removeUser($event)"></delete-user>
                 <button type="button" class="btn btn-sm btn-primary">
                     <i class="glyphicon glyphicon-pencil"></i>
                 </button>
