--- a/src/app/users/create-user/create-user.component.html
+++ b/src/app/users/create-user/create-user.component.html
@@ -2,7 +2,7 @@
     <div class="form-group">
         <input type="text" [(ngModel)]="user.name" name="name" placeholder="Name" class="form-control">
     </div>
-    <div class="form-group">
+    <div class="form-group mx-sm-3">
         <input type="text" [(ngModel)]="user.email" name="email" placeholder="Email" class="form-control">
     </div>
     <button class="btn btn-default">Create</button>
