--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -15,9 +15,7 @@
             <td>{{user != null ? user.email : ''}}</td>
             <td class="text-right">
                 <delete-user [index]="i" (userDeleted)="removeUser($event)"></delete-user>
-                <button type="button" class="btn btn-sm btn-primary">
-                    <i class="glyphicon glyphicon-pencil"></i>
-                </button>
+                <edit-user [index]="i"></edit-user>
             </td>
         </tr>
     </tbody>
