--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -15,7 +15,7 @@
             <td>{{user != null ? user.email : ''}}</td>
             <td class="text-right">
                 <delete-user [index]="i" (userDeleted)="removeUser($event)"></delete-user>
-                <edit-user [index]="i"></edit-user>
+                <edit-user [index]="i" (userEdited)="updateUser(i, $event)"></edit-user>
             </td>
         </tr>
     </tbody>
