--- a/src/app/users/create-user/create-user.component.html
+++ b/src/app/users/create-user/create-user.component.html
@@ -1,9 +1,9 @@
-<form (submit)="createUser()" class="form-inline">
+<form (submit)="createUser()" class="form-inline justify-content-end">
     <div class="form-group">
         <input type="text" [(ngModel)]="user.name" name="name" placeholder="Name" class="form-control">
     </div>
     <div class="form-group mx-sm-3">
         <input type="text" [(ngModel)]="user.email" name="email" placeholder="Email" class="form-control">
     </div>
-    <button class="btn btn-default">Create</button>
+    <button class="btn btn-success">Create <i class="fa fa-plus"></i></button>
 </form>
